[project]
name = "iris-agent"
version = "0.1.0"
description = "Ninimal code to run a pretrained IRIS agent."
authors = [
    {name="Eloi Alonso", email="eloi.alonso.7.4@gmail.com"},
]
readme = "README.md"
dependencies = [
    "einops",
    "requests",
    "torch",
]

[project.urls]
"Homepage" = "https://github.com/eloialonso/iris_agent"

